[gd_scene load_steps=2 format=3 uid="uid://cjwy6xvb0q8t4"]

[ext_resource type="Script" path="res://scripts/ui/EventScreen.gd" id="1_eventscreen"]

[node name="EventScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_eventscreen")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.12, 1)

[node name="EventPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0

[node name="EventContainer" type="VBoxContainer" parent="EventPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="EventPanel/EventContainer"]
layout_mode = 2
text = "üìñ EVENTO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EventImage" type="ColorRect" parent="EventPanel/EventContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 200)
size_flags_horizontal = 4
color = Color(0.3, 0.3, 0.4, 1)

[node name="ImageLabel" type="Label" parent="EventPanel/EventContainer/EventImage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
text = "üé® IMAGEM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="EventPanel/EventContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
text = "Descri√ß√£o do evento aparecer√° aqui..."
autowrap_mode = 3
vertical_alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="EventPanel/EventContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
text = "‚û°Ô∏è CONTINUAR"